Fix Bug 320335 - Problem with tree view when using programs:/ protocol

Create directories without trailing slashes, like every other kio slave does.

BUG: 320335
REVIEW: 110924
FIXED-IN: 4.11